--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "main": "./lib/codegen.js",
   "version": "2.1.5",
   "description": "An OpenAPI 2/3 code generator for Node.js",
-  "private": true,
   "bin": {
     "openapi-nodegen": "./cli.js"
   },
@@ -16,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://repos.acrontum.de/acrontum/ddd/openapi-nodegen"
+    "url": "https://github.com/acrontum/openapi-nodegen"
   },
   "keywords": [
     "swagger",
