--- a/package.json
+++ b/package.json
@@ -30,27 +30,26 @@
   ],
   "dependencies": {
     "colors": "^1.3.3",
-    "commander": "^2.12.2",
-    "deepmerge": "^3.2.0",
-    "fs-extra": "^7.0.1",
-    "handlebars": "^4.0.4",
-    "inquirer": "^6.3.1",
-    "js-beautify": "^1.8.8",
-    "js-yaml": "^3.10.0",
-    "json-schema-ref-parser": "^4.0.4",
-    "lodash": "4.17.11",
+    "commander": "^2.20.0",
+    "deepmerge": "^3.3.0",
+    "fs-extra": "^8.1.0",
+    "inquirer": "^6.4.1",
+    "js-beautify": "^1.10.0",
+    "js-yaml": "^3.13.1",
+    "json-schema-ref-parser": "^7.1.0",
+    "lodash": "^4.17.11",
     "md5-file": "^4.0.0",
     "nunjucks": "^3.2.0",
-    "project-name-generator": "2.1.1",
-    "recursive-copy": "^2.0.9",
+    "project-name-generator": "^2.1.7",
+    "recursive-copy": "^2.0.10",
     "uglify-es": "^3.3.9",
     "walk": "^2.3.14",
-    "word-wrap": "1.1.0"
+    "word-wrap": "^1.2.3"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "eslint": "^5.16.0",
-    "jest": "^24.7.1"
+    "eslint": "^6.0.1",
+    "jest": "^24.8.0"
   }
 }
