--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "deepmerge": "^4.0.0",
     "fs-extra": "^8.1.0",
     "inquirer": "^6.5.0",
-    "js-beautify": "^1.10.1",
     "js-yaml": "^3.13.1",
     "json-schema-ref-parser": "^7.1.0",
     "lodash": "^4.17.15",
@@ -51,6 +50,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "eslint": "^6.1.0",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "prettier": "1.18.2"
   }
 }
