fix: moved prettier to dependecies

--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "recursive-copy": "^2.0.10",
     "uglify-es": "^3.3.9",
     "walk": "^2.3.14",
-    "word-wrap": "^1.2.3"
+    "word-wrap": "^1.2.3",
+    "prettier": "1.18.2"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "eslint": "^6.1.0",
-    "jest": "^24.8.0",
-    "prettier": "1.18.2"
+    "jest": "^24.8.0"
   }
 }
