--- a/templates/typescript/docker-compose.yml
+++ b/templates/typescript/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   cdc-auth:
-    image: "dsd-authentication-service"
+    image: "{{ package.name }}"
     build:
       dockerfile: Dockerfile
       context: .
