feat: comparison check
# 1. First part is one of: chore, docs, feat, fix, refactor, style, or test
# 2. Epic|Module you are working on: (e.g. AuditLog, REACH, ...)
# 3. Ticket number followed by a colon: (e.g. BMWCDC-1234)
# 4. A short (max 50 characters) descriptive message (current time/presence: log known issue, NOT: logged known issue)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+# keep gitkeep
+!.gitkeep
+cache
+
+# dependencies
 node_modules
+
+# ide
+.idea/workspace.xml
+
+# Generated
+jest/
 .DS_Store
 npm-debug.log
-server
-
-\.idea/workspace\.xml
