--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "colors": "^1.3.3",
     "commander": "^2.20.0",
     "deepmerge": "^4.0.0",
+    "diff": "^4.0.1",
     "fs-extra": "^8.1.0",
     "inquirer": "^6.5.0",
     "js-yaml": "^3.13.1",
