--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "lodash": "^4.17.15",
     "md5-file": "^4.0.0",
     "nunjucks": "^3.2.0",
+    "prettier": "^1.18.2",
+    "progress": "^2.0.3",
     "project-name-generator": "^2.1.7",
     "recursive-copy": "^2.0.10",
     "uglify-es": "^3.3.9",
     "walk": "^2.3.14",
-    "word-wrap": "^1.2.3",
-    "prettier": "^1.18.2"
+    "word-wrap": "^1.2.3"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
