--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openapi-nodegen",
   "main": "./lib/codegen.js",
-  "version": "2.7.10",
+  "version": "2.8.0",
   "description": "An OpenAPI 2/3 code generator for Node.js",
   "bin": {
     "openapi-nodegen": "./cli.js"
@@ -22,6 +22,7 @@
     "swagger",
     "openapi",
     "rest",
+    "TypeScript",
     "es6",
     "es7",
     "es2015",
@@ -33,7 +34,6 @@
     "colors": "^1.3.3",
     "commander": "^3.0.0",
     "deepmerge": "^4.0.0",
-    "diff": "^4.0.1",
     "fs-extra": "^8.1.0",
     "inquirer": "^7.0.0",
     "js-yaml": "^3.13.1",
@@ -45,6 +45,7 @@
     "progress": "^2.0.3",
     "project-name-generator": "^2.1.7",
     "recursive-copy": "^2.0.10",
+    "text-file-diff": "^1.0.6",
     "uglify-es": "^3.3.9",
     "walk": "^2.3.14",
     "word-wrap": "^1.2.3"
