fix: @paths now work in trans-piled js code via ttsc package and ts-transform-paths in tsconfig plugins
# 1. First part is one of: chore, docs, feat, fix, refactor, style, or test
# 2. Epic|Module you are working on: (e.g. AuditLog, REACH, ...)
# 3. Ticket number followed by a colon: (e.g. BMWCDC-1234)
# 4. A short (max 50 characters) descriptive message (current time/presence: log known issue, NOT: logged known issue)

--- a/templates/typescript/tsconfig.json
+++ b/templates/typescript/tsconfig.json
@@ -2,20 +2,47 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
-    "noImplicitAny": true,
+    "target": "ES2017",
     "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "build",
-    "baseUrl": ".",
+    "baseUrl": "./",
+    "sourceMap": true,
     "resolveJsonModule": true,
-    "importHelpers": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
     "paths": {
+      "@constants": [
+        "src/constants"
+      ],
+      "@database": [
+        "src/database"
+      ],
+      "@domains": [
+        "src/domains"
+      ],
+      "@http": [
+        "src/http"
+      ],
+      "@services": [
+        "src/services"
+      ],
+      "@utils": [
+        "src/utils"
+      ],
       "@/*": [
         "src/*"
       ]
-    }
-  }
+    },
+    "plugins": [
+      {
+        "transform": "@zerollup/ts-transform-paths",
+        "exclude": ["*"]
+      }
+    ]
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "package.json"
+  ]
 }
