--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "openapi-nodegen",
   "main": "./cli.js",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "An OpenAPI 2/3 code generator for Node.js",
   "bin": {
     "openapi-nodegen": "./cli.js"
@@ -11,6 +11,7 @@
     "install:githooks": "cp ./githooks/* .git/hooks",
     "start": "node cli.js",
     "test": "jest",
+    "test:reportless": "jest -c jest.config.reportless.js",
     "lint": "eslint ./",
     "prepublish": "npm run lint && npm run test"
   },
@@ -45,6 +46,8 @@
     "progress": "^2.0.3",
     "project-name-generator": "^2.1.7",
     "recursive-copy": "^2.0.10",
+    "semver": "^6.3.0",
+    "swagger-parser": "^8.0.2",
     "text-file-diff": "^1.0.6",
     "uglify-es": "^3.3.9",
     "walk": "^2.3.14",
