--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prettier": "^1.18.2",
     "progress": "^2.0.3",
     "project-name-generator": "^2.1.7",
+    "quicktype": "^15.0.207",
     "recursive-copy": "^2.0.10",
     "text-file-diff": "^1.0.6",
     "uglify-es": "^3.3.9",
