--- a/package.json
+++ b/package.json
@@ -8,18 +8,14 @@
   },
   "scripts": {
     "install:githooks": "cp ./githooks/* .git/hooks",
-
     "test": "npm run lint && npm run test:unit",
     "test:unit": "jest",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
-
     "build:tocs": "npx doctoc .",
     "build": "ttsc -p .",
     "build:watch": "ttsc --watch -p .",
-
     "start": "node cli.js",
-
     "prepublish": "npm run lint && npm run test"
   },
   "repository": {
@@ -63,6 +59,7 @@
     "@types/fs-extra": "^5.0.4",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.23",
+    "@types/js-yaml": "^3.12.1",
     "@types/lodash": "^4.14.119",
     "@types/nunjucks": "^3.1.3",
     "@types/prettier": "^1.19.0",
