--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.23",
     "@types/js-yaml": "^3.12.1",
+    "@types/json-schema": "^7.0.3",
     "@types/lodash": "^4.14.119",
     "@types/nunjucks": "^3.1.3",
     "@types/prettier": "^1.19.0",
