feat: codecov added to travis

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openapi-nodegen",
-  "version": "4.0.6",
+  "version": "4.0.7",
   "description": "An OpenAPI 2/3 code generator for Node.js",
   "licence": "MIT",
   "main": "./build/openapiNodegen.js",
@@ -70,6 +70,7 @@
     "@types/walk": "^2.3.0",
     "@types/yamljs": "^0.2.30",
     "@zerollup/ts-transform-paths": "^1.7.3",
+    "codecov": "^3.6.1",
     "eslint": "^6.6.0",
     "hasha": "^5.1.0",
     "jest": "^24.9.0",
