--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ branches:
 language: node_js
 node_js:
   - "node"
-  - "10"
+  - "12"
 sudo: false
+scripts:
+  - npm install codecov -g
+after_success:
+  - codecov
