--- a/.nodegenrc
+++ b/.nodegenrc
@@ -1,5 +1,6 @@
 {
   "nodegenDir": "src/http/nodegen",
   "nodegenMockDir": "src/domains/__mocks__",
-  "nodegenType": "server"
+  "nodegenType": "server",
+  "a":"b",
 }
