--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "install:githooks": "cp ./githooks/* .git/hooks",
     "test": "npm run lint && npm run test:unit",
-    "test:unit": "npm run build && jest",
+    "test:unit": "npm run build && jest --runInBand",
     "test:unit:single": "jest --collect-coverage false",
     "lint": "tslint --project tsconfig.json --fix",
     "lint:fix": "tslint --project tsconfig.json --fix",
