--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openapi-nodegen",
-  "version": "4.3.1",
+  "version": "4.3.2",
   "description": "An OpenAPI 2/3 code generator for Node.js",
   "licence": "MIT",
   "main": "./build/openapiNodegen.js",
@@ -12,7 +12,7 @@
     "test": "npm run lint && npm run test:unit",
     "test:unit": "npm run build && jest --runInBand",
     "test:unit:single": "jest --collect-coverage false",
-    "lint": "tslint --project tsconfig.json --fix",
+    "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
     "build:tocs": "npx doctoc .",
     "build": "rm -fR ./build && ttsc -p .",
