--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "openapi-nodegen",
-  "version": "4.4.1",
+  "version": "4.4.2",
   "description": "An OpenAPI 2/3 code generator for Node.js",
-  "licence": "MIT",
+  "author": "Acrontum GmbH",
+  "license": "MIT",
   "main": "./build/openapiNodegen.js",
   "bin": {
     "openapi-nodegen": "./build/cli.js"
