--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-it",
-  "version": "5.1.3",
+  "version": "5.1.4",
   "description": "Generate socket and html consumers and clients from yml files (openapi/asyncapi)",
   "author": "Acrontum GmbH",
   "license": "MIT",
@@ -52,6 +52,7 @@
     "project-name-generator": "^2.1.7",
     "quicktype": "^15.0.223",
     "recursive-copy": "^2.0.10",
+    "semver": "^7.1.3",
     "text-file-diff": "^1.1.2",
     "uglify-es": "^3.3.9",
     "walk": "^2.3.14",
@@ -64,8 +65,10 @@
     "@types/js-yaml": "^3.12.3",
     "@types/json-schema": "^7.0.4",
     "@types/lodash": "^4.14.149",
+    "@types/node": "^13.11.0",
     "@types/nunjucks": "^3.1.3",
     "@types/prettier": "^1.19.1",
+    "@types/semver": "^7.1.0",
     "@types/walk": "^2.3.0",
     "@types/yamljs": "^0.2.30",
     "@zerollup/ts-transform-paths": "^1.7.15",
