--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generate-it",
   "version": "5.1.6",
-  "description": "Generate socket and html consumers and clients from yml files (openapi/asyncapi)",
+  "description": "Generate it, socket and html consumers and clients from yml files (openapi/asyncapi)",
   "author": "Acrontum GmbH",
   "license": "MIT",
   "main": "./build/openapiNodegen.js",
