feat: using npm check tool

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-it",
-  "version": "5.1.6",
+  "version": "5.1.7",
   "description": "Generate it, socket and html consumers and clients from yml files (openapi/asyncapi)",
   "author": "Acrontum GmbH",
   "license": "MIT",
@@ -46,6 +46,7 @@
     "json-schema-resolve-allof": "^1.5.0",
     "lodash": "^4.17.15",
     "md5-file": "^4.0.0",
+    "npm-tool-version-check": "^1.0.1",
     "nunjucks": "^3.2.1",
     "prettier": "^2.0.2",
     "progress": "^2.0.3",
