--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@zerollup/ts-transform-paths": "^1.7.17",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
+    "folder-hash": "^3.3.0",
     "hasha": "^5.2.0",
     "jest": "^25.3.0",
     "ts-jest": "^25.4.0",
