--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
   "exclude": [
     "package.json",
     "__tests__/**",
-    "test_server",
-    "test_asyncapi"
+    "test_server/**",
+    "test_asyncapi/**",
+    "test_server_client/**"
   ]
 }
