--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "deepmerge": "^4.2.2",
     "fs-extra": "^9.0.0",
     "inquirer": "^7.1.0",
-    "js-yaml": "^3.13.1",
     "json-schema-ref-parser": "^9.0.1",
     "json-schema-resolve-allof": "^1.5.0",
     "lodash": "^4.17.15",
@@ -74,9 +73,11 @@
     "@zerollup/ts-transform-paths": "^1.7.17",
     "codecov": "^3.6.5",
     "eslint": "^6.8.0",
+    "fdir": "^4.1.0",
     "folder-hash": "^3.3.1",
     "hasha": "^5.2.0",
     "jest": "^25.5.4",
+    "js-yaml": "^3.14.0",
     "ts-jest": "^25.4.0",
     "tslint": "^6.1.2",
     "ttypescript": "^1.5.10",
