whitelist source folders as blacklist when watching still triggers recompile

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,7 @@
       }
     ]
   },
-  "exclude": [
-    "package.json",
-    "__tests__/**",
-    "test_server/**",
-    "test_asyncapi/**",
-    "test_server_client/**"
+  "include": [
+    "src"
   ]
 }
