--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ coverage/
 jest/
 .DS_Store
 npm-debug.log
+
+# test junk - ignore all, then unignore nodegen
+test_asyncapi/*
+!test_asyncapi/*/.openapi-nodegen
+test_server*/*
+!test_server*/*/.openapi-nodegen
