--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "generate-it"
   ],
   "dependencies": {
+    "@root/walk": "^1.1.0",
     "colors": "^1.4.0",
     "commander": "^5.1.0",
     "compare-versions": "^3.6.0",
