--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "bin": {
     "generate-it": "./build/cli.js"
   },
+  "types": "build/index.d.ts",
   "scripts": {
     "install:githooks": "cp ./githooks/* .git/hooks",
     "test": "npm run lint && npm run test:unit",
