--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "importHelpers": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "declaration": true,
     "paths": {
       "@/*": [
         "src/*"
