--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/nunjucks": "^3.1.3",
     "@types/prettier": "^2.1.6",
     "@types/semver": "^7.3.4",
+    "@types/swagger-schema-official": "^2.0.21",
     "@types/yamljs": "^0.2.31",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "codecov": "^3.8.1",
