--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "rm -fR ./build && ttsc -p .",
     "build:watch": "ttsc --watch -p .",
     "start": "node cli.js",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run test"
   },
   "homepage": "https://acrontum.github.io/generate-it",
