--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-it",
-  "version": "5.25.3",
+  "version": "5.25.4",
   "description": "Generate-it, will generate servers, clients, web-socket and anything else you can template with nunjucks from yml files (openapi/asyncapi)",
   "author": "Acrontum GmbH",
   "license": "MIT",
@@ -59,6 +59,7 @@
     "recursive-copy": "^2.0.11",
     "semver": "^7.3.4",
     "text-file-diff": "^1.1.2",
+    "typescript": "^4.1.3",
     "uglify-es": "^3.3.9",
     "word-wrap": "^1.2.3"
   },
