--- a/package.json
+++ b/package.json
@@ -23,16 +23,15 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm run test"
   },
-  "homepage": "https://acrontum.github.io/generate-it",
+  "homepage": "https://acr-lfr.github.io/generate-it",
   "repository": {
     "type": "git",
-    "url": "https://github.com/acrontum/generate-it"
+    "url": "https://github.com/acr-lfr/generate-it"
   },
   "keywords": [
     "asyncapi",
     "swagger",
     "openapi",
-    "node",
     "codegen",
     "generator",
     "generate-it"
