--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-it",
-  "version": "5.31.0",
+  "version": "5.32.0",
   "description": "Generate-it, will generate servers, clients, web-socket and anything else you can template with nunjucks from yml files (openapi/asyncapi)",
   "author": "Acrontum GmbH & Liffery Ltd",
   "license": "MIT",
@@ -57,6 +57,7 @@
     "recursive-copy": "^2.0.13",
     "semver": "^7.3.5",
     "text-file-diff": "1.1.2",
+    "typescript": "^4.3.5",
     "uglify-es": "^3.3.9",
     "word-wrap": "^1.2.3"
   },
@@ -82,7 +83,6 @@
     "jest": "^25.5.4",
     "ts-jest": "^25.4.0",
     "tslint": "^6.1.3",
-    "ttypescript": "^1.5.10",
-    "typescript": "^4.3.5"
+    "ttypescript": "^1.5.10"
   }
 }
