--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   ],
   "dependencies": {
     "@root/walk": "^1.1.0",
-    "colors": "^1.4.0",
+    "colors": "1.4.0",
     "commander": "^5.1.0",
     "compare-versions": "^3.6.0",
     "deepmerge": "^4.2.2",
