--- a/.github/workflows/node-build-lint-format-test.yaml
+++ b/.github/workflows/node-build-lint-format-test.yaml
@@ -3,12 +3,10 @@ name: build-lint-format-test
 on:
   push:
     branches:
-      - develop
-      - master
+      - main
   pull_request:
     branches:
-      - develop
-      - master
+      - main
 
 jobs:
 
