--- a/.github/workflows/node-build-lint-format-test.yaml
+++ b/.github/workflows/node-build-lint-format-test.yaml
@@ -61,7 +61,11 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-      - run: mkdir -p ~/.ssh && ssh-keygen -t rsa -f ~/.ssh/id_rsa -N ""
+      - run: |
+        mkdir -p ~/.ssh && \
+        ssh-keygen -t rsa -b 4096 -f ~/.ssh/id_rsa -N "" && \
+        eval "$(ssh-agent -s)" && \
+        ssh-add ~/.ssh/id_rsa
       - run: npm test
 
   coverage:
