- merge package json files based on the isBaseTpl flag - fix bug on injections not copying over the .gitignore file - test updated to do a full injection via nodegenrc

--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/.nodegenrc
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/.nodegenrc
@@ -7,5 +7,14 @@
       "jwtType": "JwtAccess",
       "requestType": "NodegenRequest"
     }
-  }
+  },
+  "injections": [
+    {
+      "source": "https://github.com/acrontum/openapi-nodegen-typescript-server.git",
+      "isBaseTpl": true
+    },
+    {
+      "source": "https://github.com/acrontum/openapi-nodegen-typescript-inject-server.git"
+    }
+  ]
 }
