--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "prettier": "^2.4.1",
     "quicktype": "^15.0.261",
     "text-file-diff": "1.1.2",
-    "typescript": "^4.3.5",
-    "word-wrap": "^1.2.3"
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.1.2",
