--- a/.github/workflows/node-build-lint-format-test.yaml
+++ b/.github/workflows/node-build-lint-format-test.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
       - uses: actions/cache@v2
         with:
           path: '**/node_modules'
@@ -28,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '14'
       - uses: actions/cache@v2
         with:
           path: '**/node_modules'
@@ -42,7 +44,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '14'
       - uses: actions/cache@v2
         with:
           path: '**/node_modules'
@@ -56,7 +58,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '14'
       - uses: actions/cache@v2
         with:
           path: '**/node_modules'
@@ -70,7 +72,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: '12'
+          node-version: '14'
       - uses: actions/cache@v2
         with:
           path: '**/node_modules'
