feat: injections can delete files

--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/.nodegenrc
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/.nodegenrc
@@ -14,7 +14,10 @@
       "isBaseTpl": true
     },
     {
-      "source": "https://github.com/acrontum/openapi-nodegen-typescript-inject-server.git"
+      "source": "https://github.com/acrontum/openapi-nodegen-typescript-inject-server.git",
+      "deleteFiles": [
+        "src/services/PermissionService.ts"
+      ]
     }
   ]
 }
