--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-it",
-  "version": "5.53.2",
+  "version": "5.54.0",
   "description": "Generate-it, will generate servers, clients, web-socket and anything else you can template with nunjucks from yml files (openapi/asyncapi)",
   "author": "Acrontum GmbH & Liffery Ltd",
   "license": "MIT",
@@ -10,17 +10,17 @@
   "types": "build/index.d.ts",
   "scripts": {
     "install:githooks": "cp ./githooks/* .git/hooks",
-    "test": "npm run lint && npm run test:unit",
-    "test:unit": "npm run build && jest --runInBand",
-    "test:unit:single": "jest --collect-coverage false",
+    "build:tocs": "npx doctoc .",
+    "build": "rm -fR ./build && tsc -p . && tsc-alias",
+    "build:watch": "ttsc --watch -p .",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --project tsconfig.json --fix",
-    "build:tocs": "npx doctoc .",
-    "build": "rm -fR ./build && ttsc -p .",
-    "build:watch": "ttsc --watch -p .",
-    "start": "node cli.js",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run test"
+    "prepublishOnly": "npm run test",
+    "start": "node cli.js",
+    "test": "npm run lint && npm run test:unit",
+    "test:unit": "npm run build && jest --runInBand",
+    "test:unit:single": "jest --collect-coverage false"
   },
   "homepage": "https://acr-lfr.github.io/generate-it",
   "repository": {
@@ -49,31 +49,30 @@
     "json-schema-resolve-allof": "^1.5.0",
     "lodash": "^4.17.21",
     "npm-tool-version-check": "^1.2.0",
-    "nunjucks": "^3.2.3",
+    "nunjucks": "^3.2.4",
     "prettier": "^2.4.1",
     "quicktype": "^15.0.261",
     "text-file-diff": "1.1.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.1.2",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^27.0.1",
-    "@types/js-yaml": "^3.12.7",
-    "@types/json-schema": "^7.0.8",
-    "@types/lodash": "^4.14.171",
-    "@types/node": "^13.13.52",
-    "@types/nunjucks": "^3.1.5",
-    "@types/prettier": "^2.3.2",
-    "@types/swagger-schema-official": "^2.0.22",
-    "@types/yamljs": "^0.2.31",
-    "@zerollup/ts-transform-paths": "^1.7.18",
+    "@types/js-yaml": "^3.12.10",
+    "@types/json-schema": "^7.0.15",
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^18.19.3",
+    "@types/nunjucks": "^3.2.3",
+    "@types/prettier": "^2.7.3",
+    "@types/swagger-schema-official": "^2.0.25",
+    "@types/yamljs": "^0.2.34",
     "fdir": "^4.1.0",
     "folder-hash": "^4.0.4",
     "hasha": "^5.2.2",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.5",
-    "tslint": "^6.1.3",
-    "ttypescript": "^1.5.15"
+    "tsc-alias": "^1.8.8",
+    "tslint": "^6.1.3"
   }
 }
