Joi methods and Joi rc

--- a/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/.nodegenrc
+++ b/test_server/.openapi-nodegen/git/httpsGithubComAcrontumOpenapiNodegenTypescriptServerGit/.nodegenrc
@@ -8,6 +8,11 @@
       "requestType": "NodegenRequest"
     }
   },
+  "joi": {
+    "string": {
+      "autoTrim": "opt-out"
+    }
+  },
   "injections": [
     {
       "source": "https://github.com/acrontum/openapi-nodegen-typescript-server.git",
