--- a/.npmignore
+++ b/.npmignore
@@ -3,8 +3,14 @@
 .git
 .git*
 .git/*
-__tests__
-githooks
-coverage
-test_swagger.yml
 .github
+__tests__
+coverage
+docs
+githooks
+test_openapi3.yml
+test_asyncapi.yml
+test_swagger.yml
+test_asyncapi
+test_server
+test_server_client
